--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>js clock by shakir</title>
-    <meta description="Simple Clock Just for Learning web developing">
-    <meta author="shakir abdo">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -32,7 +30,7 @@
         </div>
         <div class="message-container">
             <h3 class="message">
-                <em></em>
+                    <em>waiting</em>
             </h3>
         </div>
         <div class="footer">
